objects/Asset.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>IF( Number_Of_Users__c = 0, List_Price__c * 12,Number_Of_Users__c * List_Price__c * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>IF( Number_Of_Users__c = 0, List_Price__c,Number_Of_Users__c *  List_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_City__c</fullName>
        <label>BI City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_City__c</fullName>
        <label>CC City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_State__c</fullName>
        <label>BI State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_State__c</fullName>
        <label>CC State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BI_Address__c</fullName>
        <label>BI Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Country__c</fullName>
        <label>BI Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Country__c</fullName>
        <label>CC Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalPrice__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>AssetsOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BI_VAT_Number__c</fullName>
        <label>BI VAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Postal_Code__c</fullName>
        <label>BI Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Postal_Code__c</fullName>
        <label>CC Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Fixed__c</fullName>
        <label>Discount Fixed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BI_Company_Name__c</fullName>
        <label>BI Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Credit__c</fullName>
        <label>Discount Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Users__c</fullName>
        <label>Number Of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingEndDateMS__c</fullName>
        <formula>TEXT(Month( DATEVALUE(Billing_End_Date__c) ))&amp;&quot;/&quot;&amp; TEXT(Day( DATEVALUE(Billing_End_Date__c ) )) &amp; &quot;/&quot; &amp; TEXT(Year( DATEVALUE(Billing_End_Date__c )  )) &amp; &quot; &quot; &amp; MID(TEXT(Billing_End_Date__c),12,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingEndDateMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_End_Date__c</fullName>
        <label>Billing End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Billing_Email__c</fullName>
        <label>CC Billing Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Subtype__c</fullName>
        <label>Discount Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Credit__c</fullName>
        <label>Remaining Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tmp_Discount_Type__c</fullName>
        <label>tmp Discount Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Additional_Info__c</fullName>
        <label>BI Additional Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStartDateMS__c</fullName>
        <formula>TEXT(Month( DATEVALUE(Billing_Start_Date__c) ))&amp;&quot;/&quot;&amp; TEXT(Day( DATEVALUE(Billing_Start_Date__c ) )) &amp; &quot;/&quot; &amp; TEXT(Year( DATEVALUE(Billing_Start_Date__c)  )) &amp; &quot; &quot; &amp; MID(TEXT(Billing_Start_Date__c),12,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingStartDateMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount_Length_ms__c</fullName>
        <label>Discount Length ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name_Short__c</fullName>
        <formula>Contract__r.Project_Name_Short__c</formula>
        <label>Project Name (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_Discount_Fixed__c</fullName>
        <label>tmp Discount Fixed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Length_ms__c</fullName>
        <label>Remaining Length ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tmp_Discount_Lenght__c</fullName>
        <label>tmp Discount Lenght</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Renewal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Eligible for Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tmp_Discount_Percent__c</fullName>
        <label>tmp Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Without_Discount__c</fullName>
        <label>Price Without Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Fixed_Rest_Below_Zero__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Fixed Rest Below Zero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Period__c</columns>
        <columns>FinalPrice__c</columns>
        <columns>MRR__c</columns>
        <columns>ARR__c</columns>
        <columns>Billing_End_Date__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>Cancelled__c</columns>
        <columns>Active__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>Not_eligible_for_renewal</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>FinalPrice__c</columns>
        <columns>MRR__c</columns>
        <columns>ARR__c</columns>
        <columns>Billing_End_Date__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>Cancelled__c</columns>
        <columns>Active__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>Discount_Subtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_End_Date__c</field>
            <operation>lessThan</operation>
            <value>5/23/2018 1:00 PM</value>
        </filters>
        <filters>
            <field>Eligible_for_Renewal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Not Eligible For Renewal</label>
    </listViews>
</CustomObject>